# scouting-app-graphql

./: .env  Cargo.toml  README.md
migrations/2021-11-02-142107_create_users/: up.sql
migrations/2021-11-02-204755_create_teams/: up.sql
migrations/2021-11-02-222204_create_members/: down.sql  up.sql
migrations/2021-11-02-223000_create_owners/: up.sql
migrations/2021-11-02-223457_create_forms/: up.sql
migrations/2021-11-02-223654_create_datasets/: up.sql
migrations/2021-11-02-223706_create_entries/: up.sql
src/: context.rs  main.rs  prelude.rs  token.rs
src/api/: member.rs  mod.rs  mutation.rs  query.rs  team.rs  token.rs  types.rs  user.rs
src/db/: data.rs  form.rs  mod.rs  paginate.rs  schema.rs  team.rs  user.rs
