[package]
name = "scouting-app-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_contrib = "0.4.10"
serde = { version = "1.0.130", features = ["derive"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
argon2 = "0.3.1"
dotenv = "0.15.0"
juniper = "0.15.7"
juniper_rocket = "0.8.0"
